# lelele

./: Cargo.toml  LICENSE-MIT  README.md
crates/lelele/: Cargo.toml
crates/lelele-cli/: Cargo.toml
crates/lelele-cli/src/: main.rs
crates/lelele-runtime/: Cargo.toml
crates/lelele-runtime-tests/: Cargo.toml  build.rs
crates/lelele-runtime-tests/src/: g_arithmetic.rs  g_arithmetic_prec.rs  g_simple1.rs  lib.rs
crates/lelele-runtime/src/: definition.rs  engine.rs  lib.rs  parser.rs
crates/lelele-syntax/: Cargo.toml
crates/lelele-syntax-codegen/: Cargo.toml
crates/lelele-syntax-codegen/src/: main.rs
crates/lelele-syntax/benches/: benches.rs
crates/lelele-syntax/src/: ast.rs  lib.rs  parser.rs
crates/lelele-syntax/src/parser/: gen.rs
crates/lelele-syntax/tests/: g1.lll  g10.lll  g4.lll  g5.lll  g6.lll  g8.lll  g9.lll  smoketests.rs
crates/lelele-tests/: Cargo.toml
crates/lelele-tests/benches/: benches.rs
crates/lelele-tests/src/: grammars.rs
crates/lelele-tests/tests/: smoketests.rs
crates/lelele/benches/: benches.rs
crates/lelele/examples/: sketch.rs
crates/lelele/src/: build.rs  codegen.rs  dfa.rs  first_sets.rs  grammar.rs  ielr.rs  lib.rs  lr1.rs  main.rs  parse_table.rs  parser.rs  reachability.rs  syntax.rs  util.rs
crates/lelele/src/ielr/: annotation.rs  cfg.rs  digraph.rs  grammar.rs  lalr.rs  lr0.rs  mod.rs  reachability.rs  split.rs  table.rs  types.rs  util.rs
crates/lelele/src/parser/: .gitignore  grammar.lll  grammar.rs  lexer.rs
crates/lelele/src/syntax/: ast.rs  grammar.lll  grammar.rs  lexer.rs  parser.rs
crates/lelele/tests/: arithmetic.lll  arithmetic_prec.lll  g1.lll  g10.lll  g2.lll  g4.lll  g5.lll  g6.lll  g7.lll  g8.lll  g9.lll  smoketests.rs
examples/ambiguous/: dangling_else.lll  sequence_redirect.lll
examples/arithmetic/: Cargo.toml  arithmetic.lll  build.rs
examples/arithmetic/src/: lexer.rs  main.rs  parser.rs  syntax.rs
examples/json/: .gitignore  Cargo.toml  build.rs  json.lll
examples/json/json/: npm-package.json
examples/json/src/: lexer.rs  main.rs  parser.rs  syntax.rs
examples/min-caml/: Cargo.toml  build.rs  min-caml.lll  min_caml.lll
examples/min-caml/benches/: benches.rs
examples/min-caml/src/: lexer.rs  main.rs  parser.rs  syntax.rs
examples/sketch/: .gitignore  Cargo.toml  build.rs
examples/sketch/src/: lexer.rs  lib.rs  main.rs  syntax.rs
examples/wip/: .gitignore  satysfi.lll
examples/wip/ambiguous/: dangling_else.lll  sequence_redirect.lll
lelele-vscode/: README.md  package.json  vsc-extension-quickstart.md
lelele-vscode/syntaxes/: lelele.tmLanguage.json
src/: dfa.rs  grammar.rs  lib.rs  main.rs  parser.rs
