[workspace]
resolver = "2"
members = [
    "crates/lelele",
    "crates/lelele-runtime",
    "crates/lelele-runtime-tests",
    "examples/arithmetic",
    "examples/json",
    "examples/min-caml",
]
exclude = [
    "examples/wip",
]

[workspace.package]
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2021"
rust-version = "1.70.0"

[workspace.dependencies]
anyhow = "1"
bit-set = "0.5"
bit-vec = "0.6"
clap = { version = "4", features = ["derive"] }
criterion = "0.5"
indexmap = "2"
lexgen = "0.14"
lexgen_util = "0.14"
logos = "0.13"
phf = "0.11"
phf_codegen = "0.11"
rustc-hash = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-ident = "1"

# Enable build script optimization.
# See also https://doc.rust-lang.org/cargo/reference/profiles.html#build-dependencies
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
