[package]
name = "lelele-syntax"
version = "0.0.0-dev"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
lelele = { path = "../lelele" }
lelele-runtime = { path = "../lelele-runtime" }
anyhow = { workspace = true }
logos = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "benches"
harness = false
