[package]
name = "lelele"
version = "0.0.0-dev"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
lelele-runtime = { path = "../lelele-runtime" }
anyhow = { workspace = true }
indexmap = { workspace = true }
logos = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
unicode-ident = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "benches"
harness = false
