[package]
name = "lelele"
version = "0.0.0-dev"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
lelele-runtime = { path = "../lelele-runtime" }
anyhow = { workspace = true }
bit-set = { workspace = true }
bit-vec = { workspace = true }
clap = { workspace = true }
indexmap = { workspace = true }
lexgen = { workspace = true }
lexgen_util = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-ident = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "lelele"
path = "src/main.rs"
doc = false

[[bench]]
name = "benches"
harness = false
