[package]
name = "lelele-example-min-caml"
version = "0.0.0"
edition = "2021"
publish = false

[build-dependencies]
lelele = { path = "../../crates/lelele" }

[dependencies]
lelele-runtime = { path = "../../crates/lelele-runtime" }
anyhow = { workspace = true }
logos = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
lelele = { path = "../../crates/lelele" }

[[bench]]
name = "benches"
harness = false
